--- a/context/data/scite/context/scite-context-data-interfaces.properties
+++ b/context/data/scite/context/scite-context-data-interfaces.properties
@@ -718,98 +718,98 @@ mathgroupedcommandcs mathhash mathhyphen mathiitalicshape mathit \
 mathitalic mathiuprightshape mathjitalicshape mathjuprightshape mathlabellanguage \
 mathlabeltext mathlabeltexts mathloose mathnesting mathop \
 mathopdolimits mathopnolimits mathover mathovertext mathpercent \
-mathpiitalicshape mathpiuprightshape mathrm mathscript mathsl \
-mathss mathstacker mathtext mathtextbf mathtextbi \
-mathtextbs mathtextit mathtextsl mathtexttf mathtf \
-mathtogether mathtriplet mathtt mathunder mathundertext \
-mathupright mathword mathwordbf mathwordbi mathwordbs \
-mathwordit mathwordsl mathwordtf matrix max \
-maxaligned mbox mcframed measure measured \
-measuredangle measuredeq median medskip medspace \
-menubutton mequal message mfence mframed \
-mfunction mfunctionlabeltext mhbox mho mhookleftarrow \
-mhookrightarrow mid midaligned middle middlealigned \
-middlebox middleparbox midhbox midsubsentence min \
-minimalhbox minus minuscolon mirror mixedcaps \
-mkvibuffer mleftarrow mleftharpoondown mleftharpoonup mleftoverrightarrow \
-mleftrightarrow mleftrightharpoons mmapsto mod models \
-modtwosum moduleparameter molecule mono monobold \
-mononormal month monthlong monthshort mp \
-mplocation mprandomnumber mrel mrightarrow mrightharpoondown \
-mrightharpoonup mrightleftharpoons mrightoverleftarrow mtext mtp \
-mtriplerel mtwoheadleftarrow mtwoheadrightarrow mu multimap \
-mvert nHdownarrow nHuparrow nLeftarrow nLeftrightarrow \
-nRightarrow nVDash nVdash nVleftarrow nVleftrightarrow \
-nVrightarrow nabla nacute namedheadnumber namedstructureheadlocation \
-namedstructureuservariable namedstructurevariable namedtaggedlabeltexts napostrophe napprox \
-napproxEq narrownobreakspace nasymp natural naturalhbox \
-naturalhpack naturalnumbers naturaltpack naturalvbox naturalvcenter \
-naturalvpack naturalvtop naturalwd ncaron ncommaaccent \
-ncong ncurl ndivides ne nearrow \
-neg negatecolorbox negated negativesign negemspace \
-negenspace negthinspace neng neq nequiv \
-neswarrow newattribute newcatcodetable newcounter newevery \
-newfrenchspacing newluatable newmode newrepeatablerandom newsignal \
-newsystemmode nexists nextbox nextboxdp nextboxht \
-nextboxhtdp nextboxwd nextcounter nextcountervalue nextdepth \
-nextparagraphs nextrealpage nextrealpagenumber nextsubcountervalue nextsubpage \
-nextsubpagenumber nextuserpage nextuserpagenumber ngeq ngrave \
-ngtr ngtrless ngtrsim ni nihongo \
-nin njligature nleftarrow nleftrightarrow nleq \
-nless nlessgtr nlesssim nmid nni \
-nobar nobreakspace nocap nocasing nocharacteralign \
-nocitation nocite nodepthstrut nodetostring noffigurepages \
-noflines noflinesinbox noflocalfloats noheaderandfooterlines noheightstrut \
-nohyphens noindentation noitem nonfrenchspacing nonmathematics \
-nonvalidassignment normal normalboldface normalframedwithsettings normalitalicface \
-normalizebodyfontsize normalizedfontsize normalizefontdepth normalizefontheight normalizefontline \
-normalizefontwidth normalizetextdepth normalizetextheight normalizetextline normalizetextwidth \
-normalslantedface normaltypeface nospace not note \
-notesymbol notimes notin notopandbottomlines notragged \
-nowns nparallel nprec npreccurlyeq nrightarrow \
-nsim nsimeq nsqsubseteq nsqsupseteq nsubset \
-nsubseteq nsucc nsucccurlyeq nsupset nsupseteq \
-ntilde ntimes ntriangleleft ntrianglelefteq ntriangleright \
-ntrianglerighteq nu numberhere numberofpoints numbers \
-nvDash nvdash nvleftarrow nvleftrightarrow nvrightarrow \
-nwarrow nwsearrow oacute obeydepth objectdepth \
-objectheight objectmargin objectwidth obox obreve \
-ocaron ocircumflex ocircumflexacute ocircumflexdotbelow ocircumflexgrave \
-ocircumflexhook ocircumflextilde octnumber octstringtonumber odiaeresis \
-odiaeresismacron odot odotaccent odotaccentmacron odotbelow \
-odoublegrave oeligature offset offsetbox ograve \
-ohm ohook ohorn ohornacute ohorndotbelow \
-ohorngrave ohornhook ohorntilde ohungarumlaut oiiint \
-oiint oint ointc ointclockwise ointctrclockwise \
-oinvertedbreve omacron omega omicron ominus \
-onedigitrounding oneeighth onefifth onehalf onequarter \
-onesixth onesuperior onethird oogonek oogonekmacron \
-openinterval operatorlanguage operatortext oplus optimize \
-optionalword ordfeminine ordinaldaynumber ordinalstr ordmasculine \
-ornamenttext orthogonalcomplement orthogonalcomplementsymbol oslash ostroke \
-ostrokeacute otilde otildemacron otimes outline \
-outlined outputfilename outputstreambox outputstreamcopy outputstreamunvbox \
-outputstreamunvcopy over overLeftarrow overLeftbararrow overLeftrightarrow \
-overRightarrow overRightbararrow overbar overbars overbartext \
-overbarunderbar overbrace overbracetext overbraceunderbrace overbracket \
-overbrackettext overbracketunderbracket overhook overlaybutton overlaycolor \
-overlaydepth overlayfigure overlayheight overlayimage overlaylinecolor \
-overlaylinewidth overlayoffset overlayrollbutton overlaywidth overleftarrow \
-overleftbararrow overleftharpoon overleftharpoondown overleftharpoonup overlefthookarrow \
-overleftrightarrow overlefttailarrow overloaderror overparent overparenttext \
-overparentunderparent overrightarrow overrightbararrow overrightharpoon overrightharpoondown \
-overrightharpoonup overrighthookarrow overrighttailarrow overset overstrike \
-overstrikes overtwoheadleftarrow overtwoheadrightarrow owns page \
-pagearea pageblockrealpage pagebreak pagefigure pageinjection \
-pagenumber pagereference pagestaterealpage pagestaterealpageorder paletsize \
-paragraphmark parallel paralleltext parenthesis part \
-partial pdfTeX pdfactualtext pdfbackendactualtext pdfbackendcurrentresources \
-pdfbackendsetcatalog pdfbackendsetcolorspace pdfbackendsetextgstate pdfbackendsetinfo pdfbackendsetname \
-pdfbackendsetpageattribute pdfbackendsetpageresource pdfbackendsetpagesattribute pdfbackendsetpattern pdfbackendsetshade \
-pdfcolor pdfeTeX percent percentdimen periodcentered \
-periodic periods permitcaretescape permitcircumflexescape permitspacesbetweengroups \
-perp persiandecimals persiandecimalseparator persiannumerals persianthousandsseparator \
-perthousand phantom phantombox phi phook \
+mathpiitalicshape mathrm mathscript mathsl mathss \
+mathstacker mathtext mathtextbf mathtextbi mathtextbs \
+mathtextit mathtextsl mathtexttf mathtf mathtogether \
+mathtriplet mathtt mathunder mathundertext mathupright \
+mathword mathwordbf mathwordbi mathwordbs mathwordit \
+mathwordsl mathwordtf matrix max maxaligned \
+mbox mcframed measure measured measuredangle \
+measuredeq median medskip medspace menubutton \
+mequal message mfence mframed mfunction \
+mfunctionlabeltext mhbox mho mhookleftarrow mhookrightarrow \
+mid midaligned middle middlealigned middlebox \
+middleparbox midhbox midsubsentence min minimalhbox \
+minus minuscolon mirror mixedcaps mkvibuffer \
+mleftarrow mleftharpoondown mleftharpoonup mleftoverrightarrow mleftrightarrow \
+mleftrightharpoons mmapsto mod models modtwosum \
+moduleparameter molecule mono monobold mononormal \
+month monthlong monthshort mp mplocation \
+mprandomnumber mrel mrightarrow mrightharpoondown mrightharpoonup \
+mrightleftharpoons mrightoverleftarrow mtext mtp mtriplerel \
+mtwoheadleftarrow mtwoheadrightarrow mu multimap mvert \
+nHdownarrow nHuparrow nLeftarrow nLeftrightarrow nRightarrow \
+nVDash nVdash nVleftarrow nVleftrightarrow nVrightarrow \
+nabla nacute namedheadnumber namedstructureheadlocation namedstructureuservariable \
+namedstructurevariable namedtaggedlabeltexts napostrophe napprox napproxEq \
+narrownobreakspace nasymp natural naturalhbox naturalhpack \
+naturalnumbers naturaltpack naturalvbox naturalvcenter naturalvpack \
+naturalvtop naturalwd ncaron ncommaaccent ncong \
+ncurl ndivides ne nearrow neg \
+negatecolorbox negated negativesign negemspace negenspace \
+negthinspace neng neq nequiv neswarrow \
+newattribute newcatcodetable newcounter newevery newfrenchspacing \
+newluatable newmode newrepeatablerandom newsignal newsystemmode \
+nexists nextbox nextboxdp nextboxht nextboxhtdp \
+nextboxwd nextcounter nextcountervalue nextdepth nextparagraphs \
+nextrealpage nextrealpagenumber nextsubcountervalue nextsubpage nextsubpagenumber \
+nextuserpage nextuserpagenumber ngeq ngrave ngtr \
+ngtrless ngtrsim ni nihongo nin \
+njligature nleftarrow nleftrightarrow nleq nless \
+nlessgtr nlesssim nmid nni nobar \
+nobreakspace nocap nocasing nocharacteralign nocitation \
+nocite nodepthstrut nodetostring noffigurepages noflines \
+noflinesinbox noflocalfloats noheaderandfooterlines noheightstrut nohyphens \
+noindentation noitem nonfrenchspacing nonmathematics nonvalidassignment \
+normal normalboldface normalframedwithsettings normalitalicface normalizebodyfontsize \
+normalizedfontsize normalizefontdepth normalizefontheight normalizefontline normalizefontwidth \
+normalizetextdepth normalizetextheight normalizetextline normalizetextwidth normalslantedface \
+normaltypeface nospace not note notesymbol \
+notimes notin notopandbottomlines notragged nowns \
+nparallel nprec npreccurlyeq nrightarrow nsim \
+nsimeq nsqsubseteq nsqsupseteq nsubset nsubseteq \
+nsucc nsucccurlyeq nsupset nsupseteq ntilde \
+ntimes ntriangleleft ntrianglelefteq ntriangleright ntrianglerighteq \
+nu numberhere numberofpoints numbers nvDash \
+nvdash nvleftarrow nvleftrightarrow nvrightarrow nwarrow \
+nwsearrow oacute obeydepth objectdepth objectheight \
+objectmargin objectwidth obox obreve ocaron \
+ocircumflex ocircumflexacute ocircumflexdotbelow ocircumflexgrave ocircumflexhook \
+ocircumflextilde octnumber octstringtonumber odiaeresis odiaeresismacron \
+odot odotaccent odotaccentmacron odotbelow odoublegrave \
+oeligature offset offsetbox ograve ohm \
+ohook ohorn ohornacute ohorndotbelow ohorngrave \
+ohornhook ohorntilde ohungarumlaut oiiint oiint \
+oint ointc ointclockwise ointctrclockwise oinvertedbreve \
+omacron omega omicron ominus onedigitrounding \
+oneeighth onefifth onehalf onequarter onesixth \
+onesuperior onethird oogonek oogonekmacron openinterval \
+operatorlanguage operatortext oplus optimize optionalword \
+ordfeminine ordinaldaynumber ordinalstr ordmasculine ornamenttext \
+orthogonalcomplement orthogonalcomplementsymbol oslash ostroke ostrokeacute \
+otilde otildemacron otimes outline outlined \
+outputfilename outputstreambox outputstreamcopy outputstreamunvbox outputstreamunvcopy \
+over overLeftarrow overLeftbararrow overLeftrightarrow overRightarrow \
+overRightbararrow overbar overbars overbartext overbarunderbar \
+overbrace overbracetext overbraceunderbrace overbracket overbrackettext \
+overbracketunderbracket overhook overlaybutton overlaycolor overlaydepth \
+overlayfigure overlayheight overlayimage overlaylinecolor overlaylinewidth \
+overlayoffset overlayrollbutton overlaywidth overleftarrow overleftbararrow \
+overleftharpoon overleftharpoondown overleftharpoonup overlefthookarrow overleftrightarrow \
+overlefttailarrow overloaderror overparent overparenttext overparentunderparent \
+overrightarrow overrightbararrow overrightharpoon overrightharpoondown overrightharpoonup \
+overrighthookarrow overrighttailarrow overset overstrike overstrikes \
+overtwoheadleftarrow overtwoheadrightarrow owns page pagearea \
+pageblockrealpage pagebreak pagefigure pageinjection pagenumber \
+pagereference pagestaterealpage pagestaterealpageorder paletsize paragraphmark \
+parallel paralleltext parenthesis part partial \
+pdfTeX pdfactualtext pdfbackendactualtext pdfbackendcurrentresources pdfbackendsetcatalog \
+pdfbackendsetcolorspace pdfbackendsetextgstate pdfbackendsetinfo pdfbackendsetname pdfbackendsetpageattribute \
+pdfbackendsetpageresource pdfbackendsetpagesattribute pdfbackendsetpattern pdfbackendsetshade pdfcolor \
+pdfeTeX percent percentdimen periodcentered periodic \
+periods permitcaretescape permitcircumflexescape permitspacesbetweengroups perp \
+persiandecimals persiandecimalseparator persiannumerals persianthousandsseparator perthousand \
+phantom phantombox phi phook pi \
 pickupgroupedcommand pickupgroupedcommandcs pitchfork placeattachments placebookmarks \
 placebtxrendering placechemical placecitation placecombinedlist placecomments \
 placecontent placecurrentformulanumber placedbox placefigure placefloat \
