--- a/context/data/scite/context/scite-context-data-interfaces.properties
+++ b/context/data/scite/context/scite-context-data-interfaces.properties
@@ -1292,115 +1292,116 @@ topbox topleftbox toplinebox toprightbox topskippedbox \
 tracecatcodetables tracedfontname tracedpagestate traceoutputroutines tracepositions \
 trademark translate transparencycomponents transparent transpose \
 transposesymbol trel triangle triangledown triangleleft \
-triangleq triangleright triggergroupedcommand triggergroupedcommandcs trightarrow \
-trightharpoondown trightharpoonup trightleftharpoons trightoverleftarrow triplebond \
-tripleprime tripleprimed triplereltext triplereverseprimed tripleverticalbar \
-truefilename truefontname tstroke ttraggedright ttriplerel \
-ttwoheadleftarrow ttwoheadrightarrow turnediota twodigitrounding twofifths \
-twoheaddownarrow twoheadleftarrow twoheadleftarrowtext twoheadrightarrow twoheadrightarrowtail \
-twoheadrightarrowtext twoheaduparrow twosuperior twothirds tx \
-txx typ type typebuffer typedefinedbuffer \
-typeface typefile typeinlinebuffer typescriptone typescriptprefix \
-typescriptthree typescripttwo typesetbuffer typesetbufferonly typesetfile \
-uacute ubreve ucaron uchexnumber uchexnumbers \
-ucircumflex uconvertnumber udiaeresis udiaeresisacute udiaeresiscaron \
-udiaeresisgrave udiaeresismacron udotbelow udots udoublegrave \
-uedcatcodecommand ugrave uhook uhorn uhornacute \
-uhorndotbelow uhorngrave uhornhook uhorntilde uhungarumlaut \
-uinvertedbreve ulcorner umacron undefinevalue undepthed \
-underLeftarrow underLeftbararrow underLeftrightarrow underRightarrow underRightbararrow \
-underbar underbars underbartext underbrace underbracetext \
-underbracket underbrackettext underdash underdashes underdot \
-underdots undergraphic underleftarrow underleftbararrow underleftharpoondown \
-underleftharpoonup underlefthookarrow underleftrightarrow underlefttailarrow underparent \
-underparenttext underrandom underrandoms underrightarrow underrightbararrow \
-underrightharpoondown underrightharpoonup underrighthookarrow underrighttailarrow underset \
-understrike understrikes undertwoheadleftarrow undertwoheadrightarrow undoassign \
-unexpandeddocumentvariable unframed unhhbox unicodechar unicodehexnumber \
-unicodenumber unihex uniqueMPgraphic uniqueMPpagegraphic unit \
-unitlanguage unitshigh unitslow unittext unknown \
-unknownchar unprotected unregisterhyphenationpattern unregisterparwrapper unspaceafter \
-unspaceargument unspaced unspacestring unstackscripts untexargument \
-untexcommand uogonek upand uparrow updasharrow \
-updateparagraphdemerits updateparagraphpenalties updateparagraphproperties updateparagraphshapes updownarrow \
-updownarrowbar updownarrows upharpoonleft upharpoonright uplus \
-uppercased uppercasestring uppercasing upperint upperleftdoubleninequote \
-upperleftdoublesixquote upperleftsingleninequote upperleftsinglesixquote upperrightdoubleninequote upperrightdoublesixquote \
-upperrightsingleninequote upperrightsinglesixquote upsilon upuparrows upwhitearrow \
-urcorner uring url useJSscripts useMPenvironmentbuffer \
-useMPgraphic useMPlibrary useMPrun useMPvariables useURL \
-usealignparameter useblankparameter useblocks usebodyfont usebodyfontparameter \
-usebtxdataset usebtxdefinitions usecitation usecolors usecomponent \
-usedadaptivealternative usedadaptivebox usedadaptivecolor usedadaptivedepth usedadaptiveheight \
-usedadaptivehsize usedadaptiveline usedadaptivetotal usedadaptivewidth usedirectory \
-usedummycolorparameter usedummystyleandcolor usedummystyleparameter useenvironment useexternaldocument \
-useexternalfigure useexternalrendering usefigurebase usefile usefontpath \
-usegridparameter usehyphensparameter useindentingparameter useindentnextparameter useinterlinespaceparameter \
-uselanguageparameter uselist useluamodule useluatable usemathstyleparameter \
-usemodule useproduct useprofileparameter useproject usereferenceparameter \
-useregister userpagenumber usesetupsparameter usestaticMPfigure usesubpath \
-usesymbols usetexmodule usetypescript usetypescriptfile useurl \
-usezipfile utfchar utflower utfupper utilde \
-utilityregisterlength vDash validassignment varTheta varepsilon \
-varkappa varleftopeninterval varnothing varopeninterval varphi \
-varpi varrho varrightopeninterval varsigma vartheta \
-vboxreference vdash vdots vec vee \
-veebar veeeq verbatim verbatimstring verbosenumber \
-version vert verticalgrowingbar verticalpositionbar veryraggedcenter \
-veryraggedleft veryraggedright vfrac vglue viewerlayer \
-vl vmatrix vpackbox vpackedbox vphantom \
-vpos vsmash vsmashbox vsmashed vspace \
-vspacing vvmatrix vvvmatrix wcircumflex wdofstring \
-wedge wedgeeq weekday whitearrowupfrombar wideacute \
-widebar widebreve widecheck widedddot wideddot \
-widedot widegrave widehat wideoverleftarrow wideoverleftharpoon \
-wideoverleftrightarrow wideoverrightarrow wideoverrightharpoon widering widetilde \
-wideunderbar wideunderleftarrow wideunderleftharpoon wideunderleftrightarrow wideunderrightarrow \
-wideunderrightharpoon wideundertilde widthofstring widthspanningtext wipedtokens \
-wipetokens withoutpt word wordright words \
-wordtonumber wp wr writebetweenlist writedatatolist \
-writestatus writetolist xLeftarrow xLeftrightarrow xRightarrow \
-xdefconvertedargument xequal xfrac xhookleftarrow xhookrightarrow \
-xi xleftarrow xleftharpoondown xleftharpoonup xleftoverrightarrow \
-xleftrightarrow xleftrightharpoons xlongleftarrow xlongleftrightarrow xlongrightarrow \
-xmapsto xmladdindex xmlafterdocumentsetup xmlaftersetup xmlall \
-xmlappenddocumentsetup xmlappendsetup xmlapplyselectors xmlatt xmlattdef \
-xmlattribute xmlattributedef xmlbadinclusions xmlbeforedocumentsetup xmlbeforesetup \
-xmlchainatt xmlchainattdef xmlchecknamespace xmlcommand xmlconcat \
-xmlconcatrange xmlcontext xmlcount xmldata xmldefaulttotext \
-xmldelete xmldepth xmldirect xmldirectives xmldirectivesafter \
-xmldirectivesbefore xmldisplayverbatim xmldocument xmldoif xmldoifatt \
-xmldoifelse xmldoifelseatt xmldoifelseempty xmldoifelseselfempty xmldoifelsetext \
-xmldoifelsevalue xmldoifempty xmldoifemptyelse xmldoifnot xmldoifnotatt \
-xmldoifnotempty xmldoifnotselfempty xmldoifnottext xmldoifselfempty xmldoifselfemptyelse \
-xmldoiftext xmldoiftextelse xmldoifvalueelse xmlelement xmlfileline \
-xmlfilename xmlfilter xmlfirst xmlflush xmlflushcontext \
-xmlflushdocumentsetups xmlflushlinewise xmlflushpure xmlflushsetups xmlflushspacewise \
-xmlflushtext xmlfunction xmlinclude xmlincludeoptions xmlinclusion \
-xmlinclusionbase xmlinclusions xmlindex xmlinfo xmlinjector \
-xmlinlineprettyprint xmlinlineprettyprinttext xmlinlineverbatim xmlinstalldirective xmllast \
-xmllastatt xmllastmatch xmllastpar xmlload xmlloadbuffer \
-xmlloaddata xmlloaddirectives xmlloadfile xmlloadonly xmlmain \
-xmlmapval xmlmapvalue xmlmatch xmlname xmlnamespace \
-xmlnonspace xmlpar xmlparam xmlpath xmlpos \
-xmlposition xmlprependdocumentsetup xmlprependsetup xmlprettyprint xmlprettyprinttext \
-xmlprocess xmlprocessbuffer xmlprocessdata xmlprocessfile xmlpure \
-xmlraw xmlrefatt xmlregisterdocumentsetup xmlregistereddocumentsetups xmlregisteredsetups \
-xmlregisterns xmlregistersetup xmlremapname xmlremapnamespace xmlremovedocumentsetup \
-xmlremovesetup xmlresetdocumentsetups xmlresetinjectors xmlresetsetups xmls \
-xmlsave xmlsetatt xmlsetattribute xmlsetentity xmlsetfunction \
-xmlsetinjectors xmlsetpar xmlsetparam xmlsetsetup xmlsetup \
-xmlshow xmlsnippet xmlstrip xmlstripanywhere xmlstripeverything \
-xmlstripnolines xmlstripped xmlstrippednolines xmltag xmltexatt \
-xmltexentity xmltext xmltobuffer xmltobuffertextonly xmltobufferverbose \
-xmltofile xmltoparameters xmlval xmlvalue xmlverbatim \
-xmlw xrel xrightarrow xrightharpoondown xrightharpoonup \
-xrightleftharpoons xrightoverleftarrow xsplitstring xtriplerel xtwoheadleftarrow \
-xtwoheadrightarrow xxfrac xypos yacute ycircumflex \
-ydiaeresis ydotbelow yen ygrave yhook \
-yiddishnumerals ymacron ytilde zacute zcaron \
-zdotaccent zeronumberconversion zerowidthnobreakspace zerowidthspace zeta \
-zhook zstroke zwj zwnj 
+trianglelefteq triangleq triangleright trianglerighteq triggergroupedcommand \
+triggergroupedcommandcs trightarrow trightharpoondown trightharpoonup trightleftharpoons \
+trightoverleftarrow triplebond tripleprime tripleprimed triplereltext \
+triplereverseprimed tripleverticalbar truefilename truefontname tstroke \
+ttraggedright ttriplerel ttwoheadleftarrow ttwoheadrightarrow turnediota \
+twodigitrounding twofifths twoheaddownarrow twoheadleftarrow twoheadleftarrowtext \
+twoheadrightarrow twoheadrightarrowtail twoheadrightarrowtext twoheaduparrow twosuperior \
+twothirds tx txx typ type \
+typebuffer typedefinedbuffer typeface typefile typeinlinebuffer \
+typescriptone typescriptprefix typescriptthree typescripttwo typesetbuffer \
+typesetbufferonly typesetfile uacute ubreve ucaron \
+uchexnumber uchexnumbers ucircumflex uconvertnumber udiaeresis \
+udiaeresisacute udiaeresiscaron udiaeresisgrave udiaeresismacron udotbelow \
+udots udoublegrave uedcatcodecommand ugrave uhook \
+uhorn uhornacute uhorndotbelow uhorngrave uhornhook \
+uhorntilde uhungarumlaut uinvertedbreve ulcorner umacron \
+undefinevalue undepthed underLeftarrow underLeftbararrow underLeftrightarrow \
+underRightarrow underRightbararrow underbar underbars underbartext \
+underbrace underbracetext underbracket underbrackettext underdash \
+underdashes underdot underdots undergraphic underleftarrow \
+underleftbararrow underleftharpoondown underleftharpoonup underlefthookarrow underleftrightarrow \
+underlefttailarrow underparent underparenttext underrandom underrandoms \
+underrightarrow underrightbararrow underrightharpoondown underrightharpoonup underrighthookarrow \
+underrighttailarrow underset understrike understrikes undertwoheadleftarrow \
+undertwoheadrightarrow undoassign unexpandeddocumentvariable unframed unhhbox \
+unicodechar unicodehexnumber unicodenumber unihex uniqueMPgraphic \
+uniqueMPpagegraphic unit unitlanguage unitshigh unitslow \
+unittext unknown unknownchar unprotected unregisterhyphenationpattern \
+unregisterparwrapper unspaceafter unspaceargument unspaced unspacestring \
+unstackscripts untexargument untexcommand uogonek upand \
+uparrow updasharrow updateparagraphdemerits updateparagraphpenalties updateparagraphproperties \
+updateparagraphshapes updownarrow updownarrowbar updownarrows upharpoonleft \
+upharpoonright uplus uppercased uppercasestring uppercasing \
+upperint upperleftdoubleninequote upperleftdoublesixquote upperleftsingleninequote upperleftsinglesixquote \
+upperrightdoubleninequote upperrightdoublesixquote upperrightsingleninequote upperrightsinglesixquote upsilon \
+upuparrows upwhitearrow urcorner uring url \
+useJSscripts useMPenvironmentbuffer useMPgraphic useMPlibrary useMPrun \
+useMPvariables useURL usealignparameter useblankparameter useblocks \
+usebodyfont usebodyfontparameter usebtxdataset usebtxdefinitions usecitation \
+usecolors usecomponent usedadaptivealternative usedadaptivebox usedadaptivecolor \
+usedadaptivedepth usedadaptiveheight usedadaptivehsize usedadaptiveline usedadaptivetotal \
+usedadaptivewidth usedirectory usedummycolorparameter usedummystyleandcolor usedummystyleparameter \
+useenvironment useexternaldocument useexternalfigure useexternalrendering usefigurebase \
+usefile usefontpath usegridparameter usehyphensparameter useindentingparameter \
+useindentnextparameter useinterlinespaceparameter uselanguageparameter uselist useluamodule \
+useluatable usemathstyleparameter usemodule useproduct useprofileparameter \
+useproject usereferenceparameter useregister userpagenumber usesetupsparameter \
+usestaticMPfigure usesubpath usesymbols usetexmodule usetypescript \
+usetypescriptfile useurl usezipfile utfchar utflower \
+utfupper utilde utilityregisterlength vDash validassignment \
+varTheta varepsilon varkappa varleftopeninterval varnothing \
+varopeninterval varphi varpi varrho varrightopeninterval \
+varsigma vartheta vartriangleleft vartriangleright vboxreference \
+vdash vdots vec vee veebar \
+veeeq verbatim verbatimstring verbosenumber version \
+vert verticalgrowingbar verticalpositionbar veryraggedcenter veryraggedleft \
+veryraggedright vfrac vglue viewerlayer vl \
+vmatrix vpackbox vpackedbox vphantom vpos \
+vsmash vsmashbox vsmashed vspace vspacing \
+vvmatrix vvvmatrix wcircumflex wdofstring wedge \
+wedgeeq weekday whitearrowupfrombar wideacute widebar \
+widebreve widecheck widedddot wideddot widedot \
+widegrave widehat wideoverleftarrow wideoverleftharpoon wideoverleftrightarrow \
+wideoverrightarrow wideoverrightharpoon widering widetilde wideunderbar \
+wideunderleftarrow wideunderleftharpoon wideunderleftrightarrow wideunderrightarrow wideunderrightharpoon \
+wideundertilde widthofstring widthspanningtext wipedtokens wipetokens \
+withoutpt word wordright words wordtonumber \
+wp wr writebetweenlist writedatatolist writestatus \
+writetolist xLeftarrow xLeftrightarrow xRightarrow xdefconvertedargument \
+xequal xfrac xhookleftarrow xhookrightarrow xi \
+xleftarrow xleftharpoondown xleftharpoonup xleftoverrightarrow xleftrightarrow \
+xleftrightharpoons xlongleftarrow xlongleftrightarrow xlongrightarrow xmapsto \
+xmladdindex xmlafterdocumentsetup xmlaftersetup xmlall xmlappenddocumentsetup \
+xmlappendsetup xmlapplyselectors xmlatt xmlattdef xmlattribute \
+xmlattributedef xmlbadinclusions xmlbeforedocumentsetup xmlbeforesetup xmlchainatt \
+xmlchainattdef xmlchecknamespace xmlcommand xmlconcat xmlconcatrange \
+xmlcontext xmlcount xmldata xmldefaulttotext xmldelete \
+xmldepth xmldirect xmldirectives xmldirectivesafter xmldirectivesbefore \
+xmldisplayverbatim xmldocument xmldoif xmldoifatt xmldoifelse \
+xmldoifelseatt xmldoifelseempty xmldoifelseselfempty xmldoifelsetext xmldoifelsevalue \
+xmldoifempty xmldoifemptyelse xmldoifnot xmldoifnotatt xmldoifnotempty \
+xmldoifnotselfempty xmldoifnottext xmldoifselfempty xmldoifselfemptyelse xmldoiftext \
+xmldoiftextelse xmldoifvalueelse xmlelement xmlfileline xmlfilename \
+xmlfilter xmlfirst xmlflush xmlflushcontext xmlflushdocumentsetups \
+xmlflushlinewise xmlflushpure xmlflushsetups xmlflushspacewise xmlflushtext \
+xmlfunction xmlinclude xmlincludeoptions xmlinclusion xmlinclusionbase \
+xmlinclusions xmlindex xmlinfo xmlinjector xmlinlineprettyprint \
+xmlinlineprettyprinttext xmlinlineverbatim xmlinstalldirective xmllast xmllastatt \
+xmllastmatch xmllastpar xmlload xmlloadbuffer xmlloaddata \
+xmlloaddirectives xmlloadfile xmlloadonly xmlmain xmlmapval \
+xmlmapvalue xmlmatch xmlname xmlnamespace xmlnonspace \
+xmlpar xmlparam xmlpath xmlpos xmlposition \
+xmlprependdocumentsetup xmlprependsetup xmlprettyprint xmlprettyprinttext xmlprocess \
+xmlprocessbuffer xmlprocessdata xmlprocessfile xmlpure xmlraw \
+xmlrefatt xmlregisterdocumentsetup xmlregistereddocumentsetups xmlregisteredsetups xmlregisterns \
+xmlregistersetup xmlremapname xmlremapnamespace xmlremovedocumentsetup xmlremovesetup \
+xmlresetdocumentsetups xmlresetinjectors xmlresetsetups xmls xmlsave \
+xmlsetatt xmlsetattribute xmlsetentity xmlsetfunction xmlsetinjectors \
+xmlsetpar xmlsetparam xmlsetsetup xmlsetup xmlshow \
+xmlsnippet xmlstrip xmlstripanywhere xmlstripeverything xmlstripnolines \
+xmlstripped xmlstrippednolines xmltag xmltexatt xmltexentity \
+xmltext xmltobuffer xmltobuffertextonly xmltobufferverbose xmltofile \
+xmltoparameters xmlval xmlvalue xmlverbatim xmlw \
+xrel xrightarrow xrightharpoondown xrightharpoonup xrightleftharpoons \
+xrightoverleftarrow xsplitstring xtriplerel xtwoheadleftarrow xtwoheadrightarrow \
+xxfrac xypos yacute ycircumflex ydiaeresis \
+ydotbelow yen ygrave yhook yiddishnumerals \
+ymacron ytilde zacute zcaron zdotaccent \
+zeronumberconversion zerowidthnobreakspace zerowidthspace zeta zhook \
+zstroke zwj zwnj 
 
 keywordclass.context.en=\
 
