--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -372,5 +372,5 @@ optimalmathforwardpenalties optimalmathbackwardpenalties lesswidowpenalties less
 strictwidowpenalties strictwidowpenaltiestwo strictwidowpenaltiesthree strictwidowpenaltiesfour strictclubpenalties \
 strictclubpenaltiestwo strictclubpenaltiesthree strictclubpenaltiesfour strictbrokenpenalties lessorphanpenalties \
 lessorphanpenaltiestwo lessorphanpenaltiesthree lessorphanpenaltiesfour nohpenalties novpenalties \
-toddlerpenalty orphanpenalty digitspace 
+toddlerpenalty orphanpenalty digitspace inhibitprimitive 
 
