--- a/source/luametatex/CMakeLists.txt
+++ b/source/luametatex/CMakeLists.txt
@@ -321,6 +321,7 @@ include(cmake/miniz.cmake)
 include(cmake/softposit.cmake)
 include(cmake/potrace.cmake)
 include(cmake/qrcodegen.cmake)
+include(cmake/nanojpeg.cmake)
 include(cmake/triangles.cmake)
 
 include(cmake/luametatex.cmake)
