--- a/context/data/scite/context/scite-context-data-metapost.properties
+++ b/context/data/scite/context/scite-context-data-metapost.properties
@@ -33,7 +33,9 @@ es ts triplet quadruplet totransform \
 bymatrix closedcurve closedlines primitive permanent \
 immutable mutable frozen showproperty showhashentry \
 top bot lft rt ulft \
-urt llft lrt withbytemask downsamplebytemap 
+urt llft lrt bytemap withbytemask \
+loadbytemap loadbytemapfromfile downsamplebytemap downgradebytemap withreduction \
+withpalette 
 
 keywordclass.metapost.disabled=\
 verbatimtex troffmode 
@@ -95,40 +97,40 @@ readfrom closefrom odd known unknown \
 not decimal reverse uncycle makepath \
 makepen makenep convexed uncontrolled oct \
 hex ASCII char length turningnumber \
-xpart ypart xxpart xypart yxpart \
-yypart redpart greenpart bluepart cyanpart \
-magentapart yellowpart blackpart greypart colormodel \
-prescriptpart postscriptpart stackingpart pathpart penpart \
-dashpart sqrt mexp mlog sind \
-cosd floor uniformdeviate llcorner lrcorner \
-ulcorner urcorner centerof centerofmass corners \
-xrange yrange deltapoint deltaprecontrol deltapostcontrol \
-deltadirection arclength angle cycle nocycle \
-stroked filled clipped grouped bounded \
-or and substring subpath directiontime \
-point deltapoint pathindex pathlastindex pathlength \
-pathfirst pathlast pathstate precontrol postcontrol \
-direction pathpoint pathprecontrol pathpostcontrol pathdirection \
-penoffset arctime arcpoint arcpointlist subarclength \
-mpversion rotated slanted scaled shifted \
-transformed xscaled yscaled zscaled xyscaled \
-xrelative yrelative xyrelative xabsolute yabsolute \
-xyabsolute intersectiontimes intersectiontimeslist envelope boundingpath \
-numeric string boolean path pen \
-nep picture transform color rgbcolor \
-cmykcolor pair end dump batchmode \
-nonstopmode scrollmode errorstopmode silentmode inner \
-outer setproperty showtoken showstats show \
-showvariable showdependencies doublepath contour also \
-withpen dashed withprescript withpostscript withstacking \
-withnestedprescript withnestedpostscript withlinecap withlinejoin withmiterlimit \
-withoutcolor withgreyscale withcolor withrgbcolor withcmykcolor \
-withcurvature withmesh clip setgroup setbounds \
-message errmessage errhelp lessdigits newbytemap \
-copybytemap resetbytemap resetbytemaps withbytemap bytevalue \
-bytefound bytepath setbytemapoptions setbytemapoffset reducebytemap \
-setbytemap bytemapbounds clipbytemap setbyte bytemapscaled \
-graypart 
+xpart ypart zpart wpart xxpart \
+xypart yxpart yypart redpart greenpart \
+bluepart cyanpart magentapart yellowpart blackpart \
+greypart colormodel prescriptpart postscriptpart stackingpart \
+pathpart penpart dashpart sqrt mexp \
+mlog sind cosd floor uniformdeviate \
+llcorner lrcorner ulcorner urcorner centerof \
+centerofmass corners xrange yrange deltapoint \
+deltaprecontrol deltapostcontrol deltadirection arclength angle \
+cycle nocycle stroked filled clipped \
+grouped bounded or and substring \
+subpath directiontime point deltapoint pathindex \
+pathlastindex pathlength pathfirst pathlast pathstate \
+precontrol postcontrol direction pathpoint pathprecontrol \
+pathpostcontrol pathdirection penoffset arctime arcpoint \
+arcpointlist subarclength mpversion rotated slanted \
+scaled shifted transformed xscaled yscaled \
+zscaled xyscaled xrelative yrelative xyrelative \
+xabsolute yabsolute xyabsolute intersectiontimes intersectiontimeslist \
+envelope boundingpath numeric string boolean \
+path pen nep picture transform \
+color rgbcolor cmykcolor pair end \
+dump batchmode nonstopmode scrollmode errorstopmode \
+silentmode inner outer setproperty showtoken \
+showstats show showvariable showdependencies doublepath \
+contour also withpen dashed withprescript \
+withpostscript withstacking withnestedprescript withnestedpostscript withlinecap \
+withlinejoin withmiterlimit withoutcolor withgreyscale withcolor \
+withrgbcolor withcmykcolor withcurvature withmesh clip \
+setgroup setbounds message errmessage errhelp \
+lessdigits newbytemap copybytemap resetbytemap resetbytemaps \
+withbytemap bytevalue bytefound bytepath setbytemapoptions \
+setbytemapoffset reducebytemap setbytemap bytemapbounds clipbytemap \
+setbyte bytemapscaled graypart 
 
 keywordclass.metapost.shortcuts=\
 .. ... -- --- \
