--- a/context/data/scite/context/scite-context-data-metapost.properties
+++ b/context/data/scite/context/scite-context-data-metapost.properties
@@ -27,14 +27,16 @@ nullpen savepen clearpen penpos penlabels \
 range thru z laboff bye \
 crossprod red green blue cyan \
 magenta yellow black white background \
-mm pt dd bp cm \
-pc cc in dk es \
-ts triplet quadruplet totransform bymatrix \
-closedcurve closedlines primitive permanent immutable \
-mutable frozen showproperty showhashentry top \
-bot lft rt ulft urt \
-llft lrt bytemap withbytemask loadbytemap \
-loadbytemapfromfile downsamplebytemap downgradebytemap withreduction withpalette 
+partone parttwo partthree partfour partfive \
+partsix mm pt dd bp \
+cm pc cc in dk \
+es ts triplet quadruplet totransform \
+bymatrix closedcurve closedlines primitive permanent \
+immutable mutable frozen showproperty showhashentry \
+top bot lft rt ulft \
+urt llft lrt bytemap withbytemask \
+loadbytemap loadbytemapfromfile downsamplebytemap downgradebytemap withreduction \
+withpalette 
 
 keywordclass.metapost.disabled=\
 verbatimtex troffmode 
@@ -104,18 +106,19 @@ stackingpart pathpart penpart dashpart sqrt \
 mexp mlog sind cosd floor \
 uniformdeviate llcorner lrcorner ulcorner urcorner \
 centerof centerofmass corners xrange yrange \
-deltapoint deltaprecontrol deltapostcontrol deltadirection arclength \
-angle cycle nocycle stroked filled \
-clipped grouped bounded or and \
-substring subpath directiontime point deltapoint \
-pathindex pathlastindex pathlength pathfirst pathlast \
-pathstate precontrol postcontrol direction pathpoint \
-pathprecontrol pathxpart pathypart pathpostcontrol pathdirection \
-penoffset arctime arcpoint arcpointlist subarclength \
-mpversion rotated slanted scaled shifted \
-transformed xscaled yscaled zscaled xyscaled \
-xrelative yrelative xyrelative xabsolute yabsolute \
-xyabsolute lastxy lastx lasty intersectiontimes \
+deltapoint deltaarclength deltaprecontrol deltapostcontrol deltadirection \
+arclength angle cycle recycle nocycle \
+stroked filled clipped grouped bounded \
+or and substring subpath directiontime \
+point deltapoint pathindex pathlastindex pathlength \
+pathfirst pathlast pathstate precontrol postcontrol \
+direction pathpoint pathprecontrol pathxpart pathypart \
+pathpostcontrol pathdirection penoffset arctime arcpoint \
+arcpointlist subarclength mpversion rotated slanted \
+scaled shifted transformed xscaled yscaled \
+zscaled xyscaled xrelative yrelative xyrelative \
+xabsolute yabsolute xyabsolute lastxy lastx \
+lasty previousxy previousx previousy intersectiontimes \
 intersectiontimeslist envelope boundingpath numeric string \
 boolean path pen nep picture \
 transform color rgbcolor cmykcolor pair \
@@ -130,7 +133,8 @@ clip setgroup setbounds message errmessage \
 errhelp lessdigits newbytemap copybytemap resetbytemap \
 resetbytemaps withbytemap bytevalue bytefound bytepath \
 setbytemapoptions setbytemapoffset reducebytemap setbytemap bytemapbounds \
-clipbytemap setbyte bytemapscaled graypart 
+clipbytemap setbyte bytemapscaled pruneoptions prunesingularities \
+singularity graypart 
 
 keywordclass.metapost.shortcuts=\
 .. ... -- --- \
